--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  <link href="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous">
-  <script src="app.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100&display=swap" rel="stylesheet">
   <title>Fantasias en tela | Mercería</title>
 </head>
@@ -22,10 +19,10 @@
     </div>
 
     <div class="burger-icon">
-      <i class="fas fa-bars"></i> Menú
+      <span class="fas fa-bars" id="btnmenu"></span>
     </div>
-    <ul class="nav-items main-nav mobile-show mobile-hide">
-      <li class="list-item"><a href="#">Inicio</a></li>
+    <ul class="nav-items main-nav" id="menu">
+      <li class="list-item current"><a href="#">Inicio</a></li>
       <li class="list-item"><a href="#">Mercería</a></li>
       <li class="list-item"><a href="#">Quiénes somos</a></li>
       <li class="list-item"><a href="#">Cómo llegar</a></li>
@@ -115,6 +112,7 @@
     <div class="copyright">Fantasias en telas &copy; 2022 | Diseñado por <a href="https://github.com/Lordishh">Enuel
         Monzón</a></div>
   </footer>
+  <script src="js/menu.js"></script>
 </body>
 
 </html>
