--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100&display=swap" rel="stylesheet">
-  <title>Fantasias en tela | Mercería</title>
+  <title>Fantasias en tela | Home</title>
 </head>
 
 <body>
@@ -22,11 +22,11 @@
       <span class="fas fa-bars" id="btnmenu"></span>
     </div>
     <ul class="nav-items main-nav" id="menu">
-      <li class="list-item current"><a href="#">Inicio</a></li>
-      <li class="list-item"><a href="#">Mercería</a></li>
-      <li class="list-item"><a href="#">Quiénes somos</a></li>
-      <li class="list-item"><a href="#">Cómo llegar</a></li>
-      <li class="list-item"><a href="#">Contacto</a></li>
+      <li class="list-item current"><a href="index.html">Inicio</a></li>
+      <li class="list-item"><a href="merceria.html">Mercería</a></li>
+      <li class="list-item"><a href="sobrenosotros.html">Quiénes somos</a></li>
+      <li class="list-item"><a href="comollegar.html">Cómo llegar</a></li>
+      <li class="list-item"><a href="contacto.html">Contacto</a></li>
     </ul>
   </nav>
   <div class="main-wrapper">
